# Gold-Trading-Dashboard

./: .replit  Dockerfile  app.py  dashboard.py  data_fetcher.py  indicators.py  pattern_detection.py  pattern_recognition.py  pyproject.toml  requirements.txt  signal_generator.py  technical_analysis.py  technical_indicators.py  telegram_bot.py  test.py  utils.py  working_latest.py
attached_assets/: Pasted-Below-is-an-end-to-end-roadmap-for-building-a-live-XAU-USD-dashboard-with-AI-driven-pattern-detectio-1747558729833.txt
